--- a/index.html
+++ b/index.html
@@ -29,41 +29,54 @@
       </div>
     </header>
     <main>
-      <div class="test">
-        <section class="section-about">
-          <div class="u-center-text u-margin-bottom-big">
-            <h2 class="heading-secondary">
-              Exciting tours for adventurous people
-            </h2>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam
+              iste necessitatibus odio qui reiciendis saepe! Accusamus
+              architecto cupiditate, dolore ducimus illo in omnis qui suscipit
+              vel! Dolore expedita maiores totam!
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam
+              iste necessitatibus odio qui reiciendis saepe! Accusamus
+              architecto cupiditate, dolore ducimus illo in omnis qui suscipit
+              vel! Dolore expedita maiores totam!
+            </p>
+            <a href="#" class="btn-text">Learn more &rarr;</a>
           </div>
-          <div class="row">
-            <div class="col-1-of-2">
-              <h3 class="heading-tertiary u-margin-bottom-small">
-                You're going to fall in love with nature
-              </h3>
-              <p class="paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam
-                iste necessitatibus odio qui reiciendis saepe! Accusamus
-                architecto cupiditate, dolore ducimus illo in omnis qui suscipit
-                vel! Dolore expedita maiores totam!
-              </p>
-              <h3 class="heading-tertiary u-margin-bottom-small">
-                Live adventures like you never have before
-              </h3>
-              <p class="paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam
-                iste necessitatibus odio qui reiciendis saepe! Accusamus
-                architecto cupiditate, dolore ducimus illo in omnis qui suscipit
-                vel! Dolore expedita maiores totam!
-              </p>
-              <a href="#" class="btn-text">Learn more &rarr;</a>
-            </div>
-            <div class="col-1-of-2">
-              Image composition
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img
+                src="img/nat-1-large.jpg"
+                alt="Photo1"
+                class="composition__photo composition__photo--p1"
+              />
+              <img
+                src="img/nat-2-large.jpg"
+                alt="photo2"
+                class="composition__photo composition__photo--p2"
+              /><img
+                src="img/nat-3-large.jpg"
+                alt="photo3"
+                class="composition__photo composition__photo--p3"
+              />
             </div>
           </div>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <!--    <section class="grid-test">-->
