--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
                 src="img/nat-8.jpg"
                 alt="Person on a tour"
               />
+              <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -265,6 +266,32 @@
               </p>
             </div>
           </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                class="story__img"
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+              />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                WOW! I had the best week with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque
+                corporis dolorum eius eos esse est exercitationem illo ipsum
+                iusto modi molestiae nihil nostrum officia quae quas, quod
+                reprehenderit sapiente sit.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories</a>
         </div>
       </section>
     </main>
