--- a/index.html
+++ b/index.html
@@ -94,19 +94,42 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
+              <!--              здесь мы позволяем браузеру выбрать картинку, зная ее размер,
+ плотность пикселей и ширину вьюпорта для данного брейкпойнта-->
               <img
-                src="img/nat-1-large.jpg"
-                alt="Photo1"
+                srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                sizes="(max-width:900px) 20vw, (max-width:600px) 30vw, 300px"
+                alt="Photo 1"
                 class="composition__photo composition__photo--p1"
+                src="img/nat-1-large.jpg"
               />
               <img
-                src="img/nat-2-large.jpg"
-                alt="photo2"
+                srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+                sizes="(max-width:900px) 20vw, (max-width:600px) 30vw, 300px"
+                alt="Photo 2"
                 class="composition__photo composition__photo--p2"
-              /><img
-                src="img/nat-3-large.jpg"
-                alt="photo3"
+                src="img/nat-2-large.jpg"
+              />
+              <img
+                srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+                sizes="(max-width:900px) 20vw, (max-width:600px) 30vw, 300px"
+                alt="Photo 3"
                 class="composition__photo composition__photo--p3"
+                src="img/nat-3-large.jpg"
+              />
+              <!--              <img-->
+              <!--                src="img/nat-1-large.jpg"-->
+              <!--                alt="Photo1"-->
+              <!--                class="composition__photo composition__photo&#45;&#45;p1"-->
+              <!--              />-->
+              <!--              <img-->
+              <!--                src="img/nat-2-large.jpg"-->
+              <!--                alt="photo2"-->
+              <!--                class="composition__photo composition__photo&#45;&#45;p2"-->
+              <!--              /><img-->
+              <!--                src="img/nat-3-large.jpg"-->
+              <!--                alt="photo3"-->
+              <!--                class="composition__photo composition__photo&#45;&#45;p3"-->
               />
             </div>
           </div>
@@ -414,6 +437,7 @@
           />
           <img
             srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
+            src="img/logo-green-2x.png"
             alt="Full logo"
           />
         </picture>
